--- a/css/style.css
+++ b/css/style.css
@@ -15,12 +15,17 @@ body {
     padding-bottom: 25rem;
 }
 
-#logo {
+.logo {
     text-decoration: none;
-    color: white;
+    color: rgb(10, 68, 226);
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: 30pt;
     font-weight: 15rem;
+    /* padding-bottom: 2.5rem; */
+}
+
+#sch {
+    color:orange;
 }
 
 #nav-links {
@@ -43,14 +48,18 @@ body {
     padding-bottom: 2rem;
 }
 
-.nav-item {
+.nav img {
+    width: 80px;
+
+}
+.nav-item a {
     text-decoration: none;
     color:white;
     font-size: 20px;
 
 }
 
-.nav-item:hover {
+.nav-item a:hover {
     color: rgb(10, 100, 235);
 }
 
@@ -116,15 +125,17 @@ body {
     padding-right: 2rem;
     padding-top: 6rem;
     padding-bottom: 8rem;
-    background-color: rgba(74, 74, 243, 0.788);
+    background-color: rgb(0, 140, 255);
     display: flex;
     gap: 1rem;
 }
 
 .we-text {
     height: 25rem;
+    margin-bottom: 5rem;
     width: 50%;
     font-size: 25px;
+    line-height: 2rem;
 }
 
 .we-text h2 {
@@ -220,7 +231,7 @@ body {
   }
 
 .footer {
-    background-color: #0a19e2e3;
+    background-color: rgb(0, 140, 255);
     padding: 30px;
 }
 
